--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "framer-motion": "^7.6.6",
     "parcel": "^2.7.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-number-format": "^5.0.1",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
